--- a/about.html
+++ b/about.html
@@ -10,22 +10,22 @@
 </style>
 
 <head>
-	<title>Mocapi Animation Home</title>
+	<title>Mocapi Animation - About</title>
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body style="background:#A6A6A6;">
 
 <div id="centerField" style="margin-left:auto; margin-right:auto; margin-top:0px; width:980px; height:997px;">
-	<img border="0" src="images\bgGray.jpg" style="position:absolute; top:0px;" />
+	<img border="0" src="images\bgLightGray.jpg" style="position:absolute; top:0px;" />
 
 <nav>
 	<div class="vertAligh"><div class="marginSpace"></div></div>
 	<div class="vertAligh"><div class="vertLine"></div></div>
-	<div class="vertAlighName"><h2>MOCAPI<br/>ANIMATION</h2></div>
+	<a href="index.html" class="vertAlighName"><h2>MOCAPI<br/>ANIMATION</h2></a>
 	<div class="vertAligh">
 		<ul>
-			<li><a href="about.html" class="navMenu" ><h4>ABOUT</h4><div class="navLine"></div></a></li>
+			<li><a href="about.html" class="navMenu" ><h4>ABOUT</h4><div class="navLineActive"></div></a></li>
 			<li><a href="services.html" class="navMenu" ><h4>SERVICES</h4><div class="navLine"></div></a></li>
 			<li><a href="news.html" class="navMenu" ><h4>NEWS</h4><div class="navLine"></div></a></li>
 			<li><a href="contact.html" class="navMenu" ><h4>CONTACT</h4><div class="navLine"></div></a></li>
@@ -33,7 +33,11 @@
 	</div>
 </nav>
 
-	<img border="0" src="images\tails.png" style="position:relative; width:240px; height:569px; top:220px; float: right;" />
+<div class="content">
+<h3>Mocapi. Motion capture for animators.</h3>
+ 
+&#8203;We have a good amount of previous experience on both game, ads and film. We use inertial motion capture system. <br />Flexible and efficient.	
+</div>
 
 </div>
 </body>
