Update - clean BG, ocapi head, etc.

--- a/test.htm
+++ b/test.htm
@@ -19,6 +19,8 @@
     <div id="footer-twitter">
          <img src="images/test.jpg" width="40" height="60" alt="">    
     </div>
+    
+<iframe src="https://docs.google.com/forms/d/1fT3xJbQDb7IRu_g1-moGLOPqa2bV7ttowJj1_p4UYLw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>    
     <div id="footer-fb">
          <div class="fb-like" > twat</div>
     </div>
