--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body style="background:#A6A6A6;">
+<body>
 
 <div id="centerField" style="margin-left:auto; margin-right:auto; margin-top:0px; width:980px; height:997px;">
-	<img border="0" src="images\bgLightGray.jpg" style="position:absolute; top:0px;" />
+<!--	<img border="0" src="images\bgLightGray.jpg" style="position:absolute; top:0px;" />-->
 
 <nav>
 	<div class="vertAligh"><div class="marginSpace"></div></div>
@@ -34,10 +34,14 @@
 </nav>
 
 <div class="content">
-<h3>Mocapi. Motion capture for animators.</h3>
+<h3>Your animation.</h3>
+<h3>On time.</h3>
+<h3>On Budget.</h3>
+
  
-&#8203;We have a good amount of previous experience on both game, ads and film. We use inertial motion capture system. <br />Flexible and efficient.	
 </div>
+
+<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />
 
 </div>
 </body>
