--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,9 @@
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body style="background:#A6A6A6;">
+<body>
 
 <div id="centerField" style="margin-left:auto; margin-right:auto; margin-top:0px; width:980px; height:997px;">
-	<img border="0" src="images\bgLightGray.jpg" style="position:absolute; top:0px;" />
 
 <nav>
 	<div class="vertAligh"><div class="marginSpace"></div></div>
@@ -33,7 +32,7 @@
 	</div>
 </nav>
 
-<div class="content">
+<!--<div class="content">
 <h5>Vla Dunev</h5>
   
 21 Hrelkov Str.<br />
@@ -41,7 +40,11 @@ Sofia, Bulgaria 1614<br />
 info@mocapianimation.com<br />
 Tel: +359 897839390
 
-</div>
+</div>-->
+
+<img border="0" src="images\heads.png" style="position:absolute; width:424px; height:523px; bottom:100px; left:0px;" />
+
+<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />
 
 </div>
 </body>
