--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body style="background:#A6A6A6;">
+<body>
 
 <div id="centerField" style="margin-left:auto; margin-right:auto; margin-top:0px; width:980px; height:997px;">
-	<img border="0" src="images\bgGray.jpg" style="position:absolute; top:0px;" />
 
 <nav>
 	<div class="vertAligh"><div class="marginSpace"></div></div>
@@ -33,8 +32,9 @@
 	</div>
 </nav>
 
-	<img border="0" src="images\tails.png" style="position:relative; width:240px; height:569px; top:220px; float: right;" />
-
+<!--	<img border="0" src="images\tails.png" style="position:relative; width:240px; height:569px; top:220px; float: right;" />-->
+<img border="0" src="images\tails.png" style="position:absolute; width:240px; height:569px; bottom:10px; right:0px;" />
+	
 </div>
 </body>
 </html>
