--- a/services.html
+++ b/services.html
@@ -14,10 +14,9 @@
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body style="background:#A6A6A6;">
+<body>
 
-<div id="centerField" style="margin-left:auto; margin-right:auto; margin-top:0px; width:980px; height:997px;">
-	<img border="0" src="images\bgLightGray.jpg" style="position:absolute; top:0px;" />
+<div id="centerField" style="margin-left:auto; margin-right:auto; margin-top:0px; width:980px;">
 
 <nav>
 	<div class="vertAligh"><div class="marginSpace"></div></div>
@@ -38,6 +37,8 @@
 	<h3>Multiple suits.</h3>
 	<h3>Animation and rig transfers.</h3>
 </div>
+
+<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />
 
 </div>
 </body>
