--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
 </nav>
 
 <div class="content">
-<h3>Your animation.</h3>
-<h3>On time.</h3>
+<h3>Your Animation.</h3>
+<h3>On Time.</h3>
 <h3>On Budget.</h3>
 
  
