Slogan. Gray. Copyright.

--- a/about.html
+++ b/about.html
@@ -1,47 +1,44 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE html>
 
 <html>
 <meta charset="utf-8">
 <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-
 <style type="text/css">
 </style>
 
 <head>
-	<title>Mocapi Animation - About</title>
+	<title>Mocapi - About</title>
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+<div id="centerField">
 
-<div id="centerField" style="margin-left:auto; margin-right:auto; margin-top:0px; width:980px; height:997px;">
-<!--	<img border="0" src="images\bgLightGray.jpg" style="position:absolute; top:0px;" />-->
+	<nav>		
+		<a href="index.html" id="mocapiName">
+			<div id="nameVertLine"></div>
+			<h2 id="nameText">MOCAPI<br/>ANIMATION</h2>
+		</a>
 
-<nav>
-	<div class="vertAligh"><div class="marginSpace"></div></div>
-	<div class="vertAligh"><div class="vertLine"></div></div>
-	<a href="index.html" class="vertAlighName"><h2>MOCAPI<br/>ANIMATION</h2></a>
-	<div class="vertAligh">
-		<ul>
-			<li><a href="about.html" class="navMenu" ><h4>ABOUT</h4><div class="navLineActive"></div></a></li>
-			<li><a href="services.html" class="navMenu" ><h4>SERVICES</h4><div class="navLine"></div></a></li>
-			<li><a href="news.html" class="navMenu" ><h4>NEWS</h4><div class="navLine"></div></a></li>
-			<li><a href="contact.html" class="navMenu" ><h4>CONTACT</h4><div class="navLine"></div></a></li>
-		</ul>	
-	</div>
-</nav>
+	  <div id="mocapiMenu">
+			<ul>
+				<li class="menuTab"><a href="about.html" class="menuText"><div class="menuLineActive"><h4>ABOUT</h4></div></a></li>
+				<li class="menuTab"><a href="services.html" class="menuText"><div class="menuLine"><h4>SERVICES</h4></div></a></li>
+				<li class="menuTab"><a href="news.html" class="menuText"><div class="menuLine"><h4>NEWS</h4></div></a></li>
+				<li class="menuTab"><a href="contact.html" class="menuText"><div class="menuLine"><h4>CONTACT</h4></div></a></li>
+			</ul>	
+	  </div>
+	</nav>
 
-<div class="content">
-<h3>Your Animation.</h3>
-<h3>On Time.</h3>
-<h3>On Budget.</h3>
 
- 
-</div>
 
-<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />
+	<!--<div class="picConstr" >
+		
+	</div>-->
+
+	<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />
 
 </div>
 </body>
