--- a/index_old01.html
+++ b/index_old01.html
@@ -10,7 +10,7 @@
 </style>
 
 <head>
-	<title>Mocapi Animation - Contact</title>
+	<title>Mocapi Animation Home</title>
 	<link href="mocapiOld.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -21,31 +21,20 @@
 <nav>
 	<div class="vertAligh"><div class="marginSpace"></div></div>
 	<div class="vertAligh"><div class="vertLine"></div></div>
-	<a href="index.html" class="vertAlighName"><h2>MOCAPI<br/>ANIMATION</h2></a>
+	<div class="vertAlighName"><h2>MOCAPI<br/>ANIMATION</h2></div>
 	<div class="vertAligh">
 		<ul>
 			<li><a href="about.html" class="navMenu" ><h4>ABOUT</h4><div class="navLine"></div></a></li>
 			<li><a href="services.html" class="navMenu" ><h4>SERVICES</h4><div class="navLine"></div></a></li>
 			<li><a href="news.html" class="navMenu" ><h4>NEWS</h4><div class="navLine"></div></a></li>
-			<li><a href="contact.html" class="navMenu" ><h4>CONTACT</h4><div class="navLineActive"></div></a></li>
+			<li><a href="contact.html" class="navMenu" ><h4>CONTACT</h4><div class="navLine"></div></a></li>
 		</ul>	
 	</div>
 </nav>
 
-<!--<div class="content">
-<h5>Vla Dunev</h5>
-  
-21 Hrelkov Str.<br />
-Sofia, Bulgaria 1614<br />
-info@mocapianimation.com<br />
-Tel: +359 897839390
-
-</div>-->
-
-<img border="0" src="images\heads.png" style="position:absolute; width:424px; height:523px; bottom:100px; left:0px;" />
-
-<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />
-
+<!--	<img border="0" src="images\tails.png" style="position:relative; width:240px; height:569px; top:220px; float: right;" />-->
+<img border="0" src="images\tails.png" style="position:absolute; width:240px; height:569px; bottom:10px; right:0px;" />
+	
 </div>
 </body>
 </html>
