--- a/about_old01.html
+++ b/about_old01.html
@@ -10,13 +10,14 @@
 </style>
 
 <head>
-	<title>Mocapi Animation - Contact</title>
+	<title>Mocapi Animation - About</title>
 	<link href="mocapiOld.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
 <div id="centerField" style="margin-left:auto; margin-right:auto; margin-top:0px; width:980px; height:997px;">
+<!--	<img border="0" src="images\bgLightGray.jpg" style="position:absolute; top:0px;" />-->
 
 <nav>
 	<div class="vertAligh"><div class="marginSpace"></div></div>
@@ -24,25 +25,21 @@
 	<a href="index.html" class="vertAlighName"><h2>MOCAPI<br/>ANIMATION</h2></a>
 	<div class="vertAligh">
 		<ul>
-			<li><a href="about.html" class="navMenu" ><h4>ABOUT</h4><div class="navLine"></div></a></li>
+			<li><a href="about.html" class="navMenu" ><h4>ABOUT</h4><div class="navLineActive"></div></a></li>
 			<li><a href="services.html" class="navMenu" ><h4>SERVICES</h4><div class="navLine"></div></a></li>
 			<li><a href="news.html" class="navMenu" ><h4>NEWS</h4><div class="navLine"></div></a></li>
-			<li><a href="contact.html" class="navMenu" ><h4>CONTACT</h4><div class="navLineActive"></div></a></li>
+			<li><a href="contact.html" class="navMenu" ><h4>CONTACT</h4><div class="navLine"></div></a></li>
 		</ul>	
 	</div>
 </nav>
 
-<!--<div class="content">
-<h5>Vla Dunev</h5>
-  
-21 Hrelkov Str.<br />
-Sofia, Bulgaria 1614<br />
-info@mocapianimation.com<br />
-Tel: +359 897839390
+<div class="content">
+<h3>Your Animation.</h3>
+<h3>On Time.</h3>
+<h3>On Budget.</h3>
 
-</div>-->
-
-<img border="0" src="images\heads.png" style="position:absolute; width:424px; height:523px; bottom:100px; left:0px;" />
+ 
+</div>
 
 <img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />
 
