--- a/index.html
+++ b/index.html
@@ -1,41 +1,54 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE html>
 
 <html>
 <meta charset="utf-8">
 <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-
 <style type="text/css">
 </style>
 
 <head>
-	<title>Mocapi Animation Home</title>
+	<title>Mocapi Animation</title>
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
-<div id="centerField" style="margin-left:auto; margin-right:auto; margin-top:0px; width:980px; height:997px;">
+<div id="centerField">
 
-<nav>
-	<div class="vertAligh"><div class="marginSpace"></div></div>
-	<div class="vertAligh"><div class="vertLine"></div></div>
-	<div class="vertAlighName"><h2>MOCAPI<br/>ANIMATION</h2></div>
-	<div class="vertAligh">
-		<ul>
-			<li><a href="about.html" class="navMenu" ><h4>ABOUT</h4><div class="navLine"></div></a></li>
-			<li><a href="services.html" class="navMenu" ><h4>SERVICES</h4><div class="navLine"></div></a></li>
-			<li><a href="news.html" class="navMenu" ><h4>NEWS</h4><div class="navLine"></div></a></li>
-			<li><a href="contact.html" class="navMenu" ><h4>CONTACT</h4><div class="navLine"></div></a></li>
-		</ul>	
+	<nav>		
+		<div id="mocapiName">
+		<div id="nameVertLine"></div>
+		<h2 id="nameText">MOCAPI<br/>ANIMATION</h2>
+		</div>
+
+	  <div id="mocapiMenu">
+			<ul>
+				<li class="menuTab"><a href="about.html" class="menuText"><div class="menuLine"><h4>ABOUT</h4></div></a></li>
+				<li class="menuTab"><a href="services.html" class="menuText"><div class="menuLine"><h4>SERVICES</h4></div></a></li>
+				<li class="menuTab"><a href="news.html" class="menuText"><div class="menuLine"><h4>NEWS</h4></div></a></li>
+				<li class="menuTab"><a href="contact.html" class="menuText"><div class="menuLine"><h4>CONTACT</h4></div></a></li>
+			</ul>	
+	  </div>
+	</nav>
+
+	<div class="slogan">
+		<h5>Your Animation.<br />
+		On Time.<br />
+		On Budget.</h5>
 	</div>
-</nav>
 
-<!--	<img border="0" src="images\tails.png" style="position:relative; width:240px; height:569px; top:220px; float: right;" />-->
-<img border="0" src="images\tails.png" style="position:absolute; width:240px; height:569px; bottom:10px; right:0px;" />
-	
 </div>
+
+<img border="0" src="images\tails.png" id="picTails"/>
+
+<footer>
+	<div id="trademark">
+	  <p>All trademarks used are properties of their respective owners. All rights reserved. Copyright &copy; 2014 Mocapi Animation Ltd.</p>	
+	</div>
+</footer>
+
 </body>
 </html>
 
