--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
 
 <head>
 	<title>Mocapi Animation - News</title>
-	<link href="mocapi.css" rel="stylesheet" type="text/css" />
+	<link href="mocapiOld.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
