Blog. Gradient removed

--- a/about.html
+++ b/about.html
@@ -26,21 +26,31 @@
 			<ul>
 				<li class="menuTab"><a href="about.html" class="menuText"><div class="menuLineActive"><h4>ABOUT</h4></div></a></li>
 				<li class="menuTab"><a href="services.html" class="menuText"><div class="menuLine"><h4>SERVICES</h4></div></a></li>
-				<li class="menuTab"><a href="news.html" class="menuText"><div class="menuLine"><h4>NEWS</h4></div></a></li>
+				<li class="menuTab"><a href="blog.html" class="menuText"><div class="menuLine"><h4>BLOG</h4></div></a></li>
 				<li class="menuTab"><a href="contact.html" class="menuText"><div class="menuLine"><h4>CONTACT</h4></div></a></li>
 			</ul>	
 	  </div>
 	</nav>
 
-
-
-	<!--<div class="picConstr" >
-		
-	</div>-->
-
-	<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />
+	<div class="slogan">
+		<h5>Three things we like and respect:</h5>
+		<h41><ul>
+		<li><p>The Client - he is the King, <br />his vision is the Law <br />and we do our best to support and execute.<p/></li>	
+		<li><p>Time and Quality - looking for the  balance is a challenge, <br />finding it is a reward.<p/></li>	
+		<li><p>Fun - we do best what we enjoy and we enjoy our work.<p/></li>
+		</ul>
+<p>&nbsp;</p>
+<p>Let's rock'n'roll together!<p/><h41>
+	</div>
 
 </div>
+
+<footer>
+	<div id="trademark">
+	  <p>All trademarks used are properties of their respective owners. All rights reserved. Copyright &copy; 2014 Mocapi Animation Ltd.</p>	
+	</div>
+</footer>
+
 </body>
 </html>
 
