--- a/blog.html
+++ b/blog.html
@@ -9,43 +9,43 @@
 </style>
 
 <head>
-	<title>Mocapi Animation</title>
+	<title>Mocapi - Blog</title>
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-
 <div id="centerField">
 
 	<nav>		
-		<div id="mocapiName">
-		<div id="nameVertLine"></div>
-		<h2 id="nameText">MOCAPI<br/>ANIMATION</h2>
-		</div>
+		<a href="index.html" id="mocapiName">
+			<div id="nameVertLine"></div>
+			<h2 id="nameText">MOCAPI<br/>ANIMATION</h2>
+		</a>
 
 	  <div id="mocapiMenu">
 			<ul>
 				<li class="menuTab"><a href="about.html" class="menuText"><div class="menuLine"><h4>ABOUT</h4></div></a></li>
 				<li class="menuTab"><a href="services.html" class="menuText"><div class="menuLine"><h4>SERVICES</h4></div></a></li>
-				<li class="menuTab"><a href="blog.html" class="menuText"><div class="menuLine"><h4>BLOG</h4></div></a></li>
+				<li class="menuTab"><a href="blog.html" class="menuText"><div class="menuLineActive"><h4>BLOG</h4></div></a></li>
 				<li class="menuTab"><a href="contact.html" class="menuText"><div class="menuLine"><h4>CONTACT</h4></div></a></li>
 			</ul>	
 	  </div>
 	</nav>
 
 	<div class="slogan">
-		<h5>Your Animation.<br />
-		On Time.<br />
-		On Budget.</h5>
+		<h5>Under Construction</h5>
 	</div>
 
 </div>
 
-<img border="0" src="images\tails.png" id="picTails"/>
+<!--<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />-->
 
 <footer>
+	<div id="constr">
+		<img border="0" src="images\underconstruction.jpg"/>
+	</div>
 	<div id="trademark">
-	  <p>All trademarks used are properties of their respective owners. All rights reserved. Copyright &copy; 2014 Mocapi Animation Ltd.</p>	
+		<p>All trademarks used are properties of their respective owners. All rights reserved. Copyright &copy; 2014 Mocapi Animation Ltd.</p>	
 	</div>
 </footer>
 
