--- a/services.html
+++ b/services.html
@@ -1,46 +1,54 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE html>
 
 <html>
 <meta charset="utf-8">
 <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-
 <style type="text/css">
 </style>
 
 <head>
-	<title>Mocapi Animation - Services</title>
-	<link href="mocapiOld.css" rel="stylesheet" type="text/css" />
+	<title>Mocapi - Services</title>
+	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+<div id="centerField">
 
-<div id="centerField" style="margin-left:auto; margin-right:auto; margin-top:0px; width:980px;">
+	<nav>		
+		<a href="index.html" id="mocapiName">
+			<div id="nameVertLine"></div>
+			<h2 id="nameText">MOCAPI<br/>ANIMATION</h2>
+		</a>
 
-<nav>
-	<div class="vertAligh"><div class="marginSpace"></div></div>
-	<div class="vertAligh"><div class="vertLine"></div></div>
-	<a href="index.html" class="vertAlighName"><h2>MOCAPI<br/>ANIMATION</h2></a>
-	<div class="vertAligh">
-		<ul>
-			<li><a href="about.html" class="navMenu" ><h4>ABOUT</h4><div class="navLine"></div></a></li>
-			<li><a href="services.html" class="navMenu" ><h4>SERVICES</h4><div class="navLineActive"></div></a></li>
-			<li><a href="news.html" class="navMenu" ><h4>NEWS</h4><div class="navLine"></div></a></li>
-			<li><a href="contact.html" class="navMenu" ><h4>CONTACT</h4><div class="navLine"></div></a></li>
-		</ul>	
+	  <div id="mocapiMenu">
+			<ul>
+				<li class="menuTab"><a href="about.html" class="menuText"><div class="menuLine"><h4>ABOUT</h4></div></a></li>
+				<li class="menuTab"><a href="services.html" class="menuText"><div class="menuLineActive"><h4>SERVICES</h4></div></a></li>
+				<li class="menuTab"><a href="blog.html" class="menuText"><div class="menuLine"><h4>BLOG</h4></div></a></li>
+				<li class="menuTab"><a href="contact.html" class="menuText"><div class="menuLine"><h4>CONTACT</h4></div></a></li>
+			</ul>	
+	  </div>
+	</nav>
+
+	<div class="slogan">
+		<h5>Under Construction</h5>
 	</div>
-</nav>
-
-<div class="content">
-	<h3>Motion capture on location.</h3>
-	<h3>Multiple suits.</h3>
-	<h3>Animation and rig transfers.</h3>
-</div>
-
-<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />
 
 </div>
+
+<!--<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />-->
+
+<footer>
+	<div id="constr">
+		<img border="0"  width="940" height="80" src="images\underconstruction.jpg" />
+	</div>
+	<div id="trademark" style="top:-105px;">
+		<p>All trademarks used are properties of their respective owners. All rights reserved. Copyright &copy; 2014 Mocapi Animation Ltd.</p>	
+	</div>
+</footer>
+
 </body>
 </html>
 
