--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,12 @@
 	</nav>
 
 	<div class="slogan" style="height:600px; background:#9f9f9f">
+	Vla Dunev  
+
+21 Nikolai Hrelkov Str.
+Sofia, Bulgaria 1614
+info@mocapianimation.com
+Tel: +359 897839390
 	</div>
 
 </div>
