--- a/services.html
+++ b/services.html
@@ -33,7 +33,22 @@
 	</nav>
 
 	<div class="slogan">
-		<h5>Under Construction</h5>
+	<p>Motion Capture (or mo-cap for short) is an extension of your hand. It takes away the tedious work of the first and second pass of your animation and leaves you the pleasure of the last 20% of the work which is the true mastery: polishing the retargeting, exaggerating what the talent could not do because of his human body., giving the character life with facial animation. Here is a short description of what we can do for you.</p>
+
+
+	<h4>MO-CAP (whereever you need it):</h4>
+&#12288;&#12288;&#12288;&#12288;- We can come to you: at your office for example.
+&#12288;&#12288;&#12288;&#12288;- PROs: you can direct the session, you can use your own actors and we can     show you in real time what the actor does, retargeted to your 3D character.
+&#12288;&#12288;&#12288;&#12288;- CONs: more expensive. A day like this can start at EUR 1 500.
+&#12288;&#12288;&#12288;&#12288;
+&#12288;&#12288;&#12288;&#12288;- We can work remotely (you can send us a list of motions which we can record for you):
+&#12288;&#12288;&#12288;&#12288;- PROs: we can still let you direct the shoot via Skype (or similar). This is also    budget friendly: a day like this can start at EUR750.
+&#12288;&#12288;&#12288;&#12288;- CONs: less control, longer approval process.
+
+LIVE EVENTS (real time streaming):
+&#12288;&#12288;- PROs: we can come to your set or venue and we can make your live event as    interesting as it ever gets. Ask us for a demo!
+
+RETARGETING: If/when needed, we can help further than do your mo-cap. We can help with retargeting the motions for your characters, relieving you of any animation related duties.
 	</div>
 
 </div>
