--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,14 @@
 	</nav>
 
 	<div class="slogan" style="height:600px; background:#9f9f9f">
-	Vla Dunev  
+	<h5>Vla Dunev</h5>  
 
-21 Nikolai Hrelkov Str.
-Sofia, Bulgaria 1614
-info@mocapianimation.com
-Tel: +359 897839390
+	<h41>
+	21 Nikolai Hrelkov Str.<br />
+	Sofia, Bulgaria 1614<br />
+	info [at] mocapianimation [dot] com<br />
+	phone +359 897839390<br />
+	</h41>
 	</div>
 
 </div>
