--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@
 	<div class="slogan">
 		<h5>Three things we like and respect:</h5>
 		<h41><ul>
-		<li><p>The Client - he is the King, <br />his vision is the Law <br />and we do our best to support and execute.<p/></li>	
-		<li><p>Time and Quality - looking for the  balance is a challenge, <br />finding it is a reward.<p/></li>	
-		<li><p>Fun - we do best what we enjoy and we enjoy our work.<p/></li>
+		<li><p>The Client: he is the King, <br />his vision is the Law,<br />we do our best to support and execute.<p/></li>	
+		<li><p>Time and Quality: looking for the  balance is a challenge, <br />finding it is a reward.<p/></li>	
+		<li><p>Fun: we do best what we enjoy and we enjoy our work.<p/></li>
 		</ul>
 <p>&nbsp;</p>
 <p>Let's rock'n'roll together!<p/><h41>
