--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
 </div>
 
-<img border="0" src="images\heads.png" id="picHeads"/>
+<img border="0" src="images/heads.png" id="picHeads"/>
 
 <footer>
 	<div id="trademark">
