--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 </div>
 
-<img border="0" src="images\tails.png" id="picTails"/>
+<img border="0" src="images/tails.png" id="picTails"/>
 
 <footer>
 	<div id="trademark">
