--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <head>
 	<title>Mocapi Animation - Motion Capture Services</title>
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
+	<link rel="icon" type="image/png" href="images/m-iconGrad.png" />
 	<meta name="keywords" content="motion capture, mo-cap, mocap, animation, keyframing, key-framing, keyframe, retargeting, retarget, rigging, humanIK, maya, motionbuilder, max, 3dsmax, 3ds max, xsens, mvn, mvn2, moven, mvn studio, services, tutorials, tutors, game, ingame, in-game, film, cinematic, animatic, ingame, Unity, Unity3D, previz, previs, portable">
 	<meta name="description" content="Mocap and Character Animation Service, Jump-in Tools, Retargeting, Impossible Turnaround Times!">
 </head>
