--- a/services.html
+++ b/services.html
@@ -7,22 +7,19 @@
 
 <style type="text/css">
 </style>
-
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-48802593-1', 'mocapianimation.com');
-	  ga('send', 'pageview');
-	</script>
 	
 <head>
 	<title>Mocapi - Services</title>
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
+	<link rel="icon" type="image/png" href="images/m-iconGrad.png" />
 	<meta name="keywords" content="motion capture, mo-cap, mocap, animation, keyframing, key-framing, keyframe, retargeting, retarget, rigging, humanIK, maya, motionbuilder, max, 3dsmax, 3ds max, xsens, mvn, mvn2, moven, mvn studio, services, tutorials, tutors, game, ingame, in-game, film, cinematic, animatic, ingame, Unity, Unity3D, previz, previs, portable">
 	<meta name="description" content="Mocap and Character Animation Service, Jump-in Tools, Retargeting, Impossible Turnaround Times!">	
+
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  ga('create', 'UA-48802593-1', 'mocapianimation.com');
+	  ga('send', 'pageview');
+	</script>
 </head>
 
 <body>
@@ -45,14 +42,10 @@
 	</nav>
 
 	<div class="slogan">
-	<h42>
-	<p>Motion Capture (or mo-cap for short) is an extension of your hand. <br />It takes away the tedious work of the first and second pass of your animation and leaves you the pleasure of the last 20% of the work which is the true mastery: polishing the retargeting, exaggerating what the talent could not do because of his human body., giving the character life with facial animation.</p> 
-	<p>Here is a short description of what we can do for you.</p></h42>
-
-
-	<h4>MO-CAP (whereever you need it):</h4>
+	<h41>Motion Capture (or mocap for short) is an extension of your hand. It takes away the tedious work of first and second animation pass and leaves you the pleasure of the true mastery: now you have more time to polish the retargeting, exaggerate what the talent could not do, give the character life with facial animation.<h/41>
+	<h4>MOTION CAPTURE (wherever you need it):</h4>
 		<h42><ul>
-		<li><p>We can come to you: at your office for example.<p/></li>	
+		<li><p>At your location: studio, set, office etc.<p/></li>	
 		<h42><ul>
 			<li><p>PROs: you can direct the session, you can use your own actors and we can show you in real time what the actor does, retargeted to your 3D character.<p/></li>	
 			<li><p>CONs: more expensive. A day like this can start at EUR 1 500.<p/></li>
@@ -60,7 +53,7 @@
 		</ul>
 
 		<ul>
-		<li><p>We can work remotely (you can send us a list of motions which we can record for you):<p/></li>	
+		<li><p>Remotely, from our location: send us a list of motions to capture for you.<p/></li>	
 		<h42><ul>
 			<li><p>PROs: we can still let you direct the shoot via Skype (or similar). This is also budget friendly: a day like this can start at EUR750.<p/></li>	
 			<li><p>CONs: less control, longer approval process.<p/></li>
@@ -68,15 +61,16 @@
 		</ul>
 &#12288;&#12288;&#12288;&#12288;	</h42>
 
-	<h4>LIVE EVENTS (real time streaming):</h4>
+	<h4>LIVE EVENTS (runtime streaming at live venues):</h4>
 		<h42><ul>
-		<li><p>PROs: we can come to your set or venue and we can make your live event as interesting as it ever gets. Ask us for a demo!<p/></li>	
+		<li><p>We can come to your set or venue and make your live event as interesting as it ever gets.</p>
+		<p>Ask us for an online demo!<p/></li>	
 		</ul>
 &#12288;&#12288;&#12288;&#12288;	</h42>
 
-	<h4>RETARGETING: If/when needed, we can help further than do your mo-cap.</h4> 
+	<h4>RETARGETING (If needed, we can help further):</h4> 
 		<h42><ul>
-		<li><p>We can help with retargeting the motions for your characters, relieving you of any animation related duties.<p/></li>	
+		<li><p>We can lend a hand with retargeting the motions to your characters</p></li>	
 		</ul>
 &#12288;&#12288;&#12288;&#12288;	</h42>
 
