--- a/contact.html
+++ b/contact.html
@@ -11,16 +11,8 @@
 <head>
 	<title>Mocapi - Contact</title>
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
-	
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	<link rel="icon" type="image/png" href="images/m-iconGrad.png" />
 
-	  ga('create', 'UA-48802593-1', 'mocapianimation.com');
-	  ga('send', 'pageview');
-	</script>
 </head>
 
 <body>
@@ -43,19 +35,20 @@
 	</nav>
 
 	<div class="slogan" style="height:600px; background:#9f9f9f">
-	<h5>Vla Dunev</h5>  
+	<h5>Mocapi Animation Ltd.</h5>  
 
 	<h41>
-	21 Nikolai Hrelkov Str.<br />
-	Sofia, Bulgaria 1614<br />
-	info [at] mocapianimation [dot] com<br />
-	phone +359 897839390<br />
+		g.k. Geo Milev <br>
+		bl.46 ent.B<br>
+		1113 Sofia, Bulgaria<br /><br />
+		info [at] mocapianimation [dot] com<br />
+		phone +359 897 839390, +359 898 413900<br />
 	</h41>
 	</div>
 
 </div>
 
-<img border="0" src="images/heads.png" id="picHeads"/>
+<div id="picHeads"></div>
 
 <footer>
 	<div id="trademark">
