--- a/index.html
+++ b/index.html
@@ -8,15 +8,6 @@
 <style type="text/css">
 </style>
 
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-48802593-1', 'mocapianimation.com');
-	  ga('send', 'pageview');
-	</script>
 	
 <head>
 	<title>Mocapi Animation - Motion Capture Services</title>
@@ -24,6 +15,12 @@
 	<link rel="icon" type="image/png" href="images/m-iconGrad.png" />
 	<meta name="keywords" content="motion capture, mo-cap, mocap, animation, keyframing, key-framing, keyframe, retargeting, retarget, rigging, humanIK, maya, motionbuilder, max, 3dsmax, 3ds max, xsens, mvn, mvn2, moven, mvn studio, services, tutorials, tutors, game, ingame, in-game, film, cinematic, animatic, ingame, Unity, Unity3D, previz, previs, portable">
 	<meta name="description" content="Mocap and Character Animation Service, Jump-in Tools, Retargeting, Impossible Turnaround Times!">
+
+	<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  ga('create', 'UA-48802593-1', 'mocapianimation.com');
+	  ga('send', 'pageview');
+	</script>
 </head>
 
 <body>
@@ -54,7 +51,7 @@
 
 </div>
 
-<img border="0" src="images/tails.png" id="picTails"/>
+<div id="picTails"></div>
 
 <footer>
 	<div id="trademark">
