robots off, noindex on

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<title>Mocapi - Contact</title>
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" type="image/png" href="images/m-iconGrad.png" />
-
+	<meta name="robots" content="noindex">
 </head>
 
 <body>
@@ -34,17 +34,7 @@
 	  </div>
 	</nav>
 
-	<div class="slogan" style="height:600px; background:#9f9f9f">
-	<h5>Mocapi Animation Ltd.</h5>  
-
-	<h41>
-		g.k. Geo Milev <br>
-		bl.46 ent.B<br>
-		1113 Sofia, Bulgaria<br /><br />
-		info [at] mocapianimation [dot] com<br />
-		phone +359 897 839390, +359 898 413900<br />
-	</h41>
-	</div>
+	<div class="form_temp">	</div>
 
 </div>
 
