--- a/contact.html
+++ b/contact.html
@@ -26,16 +26,25 @@
 
 	  <div id="mocapiMenu">
 			<ul>
-				<li class="menuTab"><a href="about.html" class="menuText"><div class="menuLine"><h4>ABOUT</h4></div></a></li>
-				<li class="menuTab"><a href="services.html" class="menuText"><div class="menuLine"><h4>SERVICES</h4></div></a></li>
-				<li class="menuTab"><a href="blog.html" class="menuText"><div class="menuLine"><h4>BLOG</h4></div></a></li>
-				<li class="menuTab"><a href="contact.html" class="menuText"><div class="menuLineActive"><h4>CONTACT</h4></div></a></li>
+				<li class="menuTab"><a href="contact.html" class="menuLink"><h6>CONTACT</h6><div class="menuLineActive"></div></a></li>
+				<li class="menuTab"><a href="blog.html" class="menuLink"><h6>BLOG</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="services.html" class="menuLink"><h6>SERVICES</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="about.html" class="menuLink"><h6>ABOUT</h6><div class="menuLine"></div></a></li>
 			</ul>	
 	  </div>
+
 	</nav>
 
-	<div class="form_temp">	</div>
+<iframe class="formContact" src="https://docs.google.com/forms/d/1gL_0zISjzqryAnGy3wf-CKiHejxAH6qiuvHiO3p_vCc/viewform?embedded=true" width="568" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
+<div id="mocapiContact">
+		<h43>g.k. Geo Milev <br>
+		bl.46 ent.B<br>
+		1113 Sofia, Bulgaria<br /><br />
+		email: info [at] mocapianimation [dot] com<br />
+		phone: +359 897 839390<br />
+		<span class="grayText">phone:</span> +359 898 413900</h43>
+</div>
 </div>
 
 <div id="picHeads"></div>
