--- a/services.html
+++ b/services.html
@@ -33,48 +33,54 @@
 
 	  <div id="mocapiMenu">
 			<ul>
-				<li class="menuTab"><a href="about.html" class="menuText"><div class="menuLine"><h4>ABOUT</h4></div></a></li>
-				<li class="menuTab"><a href="services.html" class="menuText"><div class="menuLineActive"><h4>SERVICES</h4></div></a></li>
-				<li class="menuTab"><a href="blog.html" class="menuText"><div class="menuLine"><h4>BLOG</h4></div></a></li>
-				<li class="menuTab"><a href="contact.html" class="menuText"><div class="menuLine"><h4>CONTACT</h4></div></a></li>
+				<li class="menuTab"><a href="contact.html" class="menuLink"><h6>CONTACT</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="blog.html" class="menuLink"><h6>BLOG</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="services.html" class="menuLink"><h6>SERVICES</h6><div class="menuLineActive"></div></a></li>
+				<li class="menuTab"><a href="about.html" class="menuLink"><h6>ABOUT</h6><div class="menuLine"></div></a></li>
 			</ul>	
 	  </div>
 	</nav>
 
 	<div class="slogan">
-	<h41>Motion Capture (or mocap for short) is an extension of your hand. It takes away the tedious work of first and second animation pass and leaves you the pleasure of the true mastery: now you have more time to polish the retargeting, exaggerate what the talent could not do, give the character life with facial animation.<h/41>
-	<h4>MOTION CAPTURE (wherever you need it):</h4>
-		<h42><ul>
+	<h42>
+	<p><span class="subheader">MOTION CAPTURE (wherever you need it):</span></p>
+		<ul>
 		<li><p>At your location: studio, set, office etc.<p/></li>	
-		<h42><ul>
+			<ul class="listNone">
 			<li><p>PROs: you can direct the session, you can use your own actors and we can show you in real time what the actor does, retargeted to your 3D character.<p/></li>	
 			<li><p>CONs: more expensive. A day like this can start at EUR 1 500.<p/></li>
-		</ul>
+			</ul>
 		</ul>
 
 		<ul>
 		<li><p>Remotely, from our location: send us a list of motions to capture for you.<p/></li>	
-		<h42><ul>
+			<ul class="listNone">
 			<li><p>PROs: we can still let you direct the shoot via Skype (or similar). This is also budget friendly: a day like this can start at EUR750.<p/></li>	
 			<li><p>CONs: less control, longer approval process.<p/></li>
+			</ul>
 		</ul>
-		</ul>
-&#12288;&#12288;&#12288;&#12288;	</h42>
+		<br>
 
-	<h4>LIVE EVENTS (runtime streaming at live venues):</h4>
-		<h42><ul>
-		<li><p>We can come to your set or venue and make your live event as interesting as it ever gets.</p>
-		<p>Ask us for an online demo!<p/></li>	
+	<p>LIVE EVENTS (runtime streaming at live venues):</p>
+		<ul>
+			<li><p>We can come to your set or venue and make your live event as interesting as it ever gets.</p>
+			<ul class="listNone">
+				<li><p>Ask us for an online demo!<p/></li>	
+			</ul>
 		</ul>
-&#12288;&#12288;&#12288;&#12288;	</h42>
+		<br>
 
-	<h4>RETARGETING (If needed, we can help further):</h4> 
-		<h42><ul>
-		<li><p>We can lend a hand with retargeting the motions to your characters</p></li>	
+	<p>RETARGETING (If needed, we can help further):</p> 
+		<ul>
+			<li><p>We can lend a hand with retargeting the motions to your characters</p></li>	
 		</ul>
-&#12288;&#12288;&#12288;&#12288;	</h42>
-
+	</h42>
 	</div>
+
+<div id="mocapiIntro">
+	<h43><p>Motion Capture (or mocap for short) is an extension of your hand.</p> 
+	<p>It takes away the tedious work of first and second animation pass and leaves you the pleasure of the true mastery: now you have more time to polish the retargeting, exaggerate what the talent could not do, give the character life with facial animation.</p></h43>
+</div>
 
 </div>
 
