--- a/about.html
+++ b/about.html
@@ -33,23 +33,26 @@
 
 	  <div id="mocapiMenu">
 			<ul>
-				<li class="menuTab"><a href="about.html" class="menuText"><div class="menuLineActive"><h4>ABOUT</h4></div></a></li>
-				<li class="menuTab"><a href="services.html" class="menuText"><div class="menuLine"><h4>SERVICES</h4></div></a></li>
-				<li class="menuTab"><a href="blog.html" class="menuText"><div class="menuLine"><h4>BLOG</h4></div></a></li>
-				<li class="menuTab"><a href="contact.html" class="menuText"><div class="menuLine"><h4>CONTACT</h4></div></a></li>
+				<li class="menuTab"><a href="contact.html" class="menuLink"><h6>CONTACT</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="blog.html" class="menuLink"><h6>BLOG</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="services.html" class="menuLink"><h6>SERVICES</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="about.html" class="menuLink"><h6>ABOUT</h6><div class="menuLineActive"></div></a></li>
 			</ul>	
 	  </div>
+
 	</nav>
 
-	<div class="slogan">
-		<h5>Three things we like and respect:</h5>
+	<div class="sloganSpacey">
+		<h5>Three HiQ we like and respect:</h5>
 		<h41><ul>
-		<li><p>The Client: he is the King, <br />his vision is the Law,<br />we do our best to support and execute.<p/></li>	
-		<li><p>Time and Quality: looking for the  balance is a challenge, <br />finding it is a reward.<p/></li>	
-		<li><p>Fun: we do best what we enjoy and we enjoy our work.<p/></li>
+		<li><p>	The Client: he is the King, his vision is the Law.
+				<br>We do our best to support and execute.<p/></li>	
+		<li><p>	Time and Quality: looking for the balance is a challenge. 
+				<br>Finding it is a reward.<p/></li>	
+		<li><p>	Fun: we do best what we enjoy.
+				<br>It is our craft we enjoy the most.<p/></li>
 		</ul>
-<p>&nbsp;</p>
-<p>Let's rock'n'roll together!<p/><h41>
+
 	</div>
 
 </div>
