--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,6 @@
 	  ga('create', 'UA-48802593-1', 'mocapianimation.com');
 	  ga('send', 'pageview');
 	</script>
-
 </head>
 
 <body>
@@ -35,12 +34,13 @@
 
 	  <div id="mocapiMenu">
 			<ul>
-				<li class="menuTab"><a href="about.html" class="menuText"><div class="menuLine"><h4>ABOUT</h4></div></a></li>
-				<li class="menuTab"><a href="services.html" class="menuText"><div class="menuLine"><h4>SERVICES</h4></div></a></li>
-				<li class="menuTab"><a href="blog.html" class="menuText"><div class="menuLineActive"><h4>BLOG</h4></div></a></li>
-				<li class="menuTab"><a href="contact.html" class="menuText"><div class="menuLine"><h4>CONTACT</h4></div></a></li>
+				<li class="menuTab"><a href="contact.html" class="menuLink"><h6>CONTACT</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="blog.html" class="menuLink"><h6>BLOG</h6><div class="menuLineActive"></div></a></li>
+				<li class="menuTab"><a href="services.html" class="menuLink"><h6>SERVICES</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="about.html" class="menuLink"><h6>ABOUT</h6><div class="menuLine"></div></a></li>
 			</ul>	
 	  </div>
+
 	</nav>
 
 	<div class="slogan">
