--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
 
 	  <div id="mocapiMenu">
 			<ul>
-				<li class="menuTab"><a href="about.html" class="menuText"><div class="menuLine"><h4>ABOUT</h4></div></a></li>
-				<li class="menuTab"><a href="services.html" class="menuText"><div class="menuLine"><h4>SERVICES</h4></div></a></li>
-				<li class="menuTab"><a href="blog.html" class="menuText"><div class="menuLine"><h4>BLOG</h4></div></a></li>
-				<li class="menuTab"><a href="contact.html" class="menuText"><div class="menuLine"><h4>CONTACT</h4></div></a></li>
+				<li class="menuTab"><a href="contact.html" class="menuLink"><h6>CONTACT</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="blog.html" class="menuLink"><h6>BLOG</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="services.html" class="menuLink"><h6>SERVICES</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="about.html" class="menuLink"><h6>ABOUT</h6><div class="menuLine"></div></a></li>
 			</ul>	
 	  </div>
+
 	</nav>
 
 	<div class="slogan">
