--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
 
 <footer>
 	<div id="constr">
-		<img border="0"  width="940" height="80" src="images\underconstruction.jpg" />
+		<img border="0"  width="940" height="80" src="images/underconstruction.jpg" />
 	</div>
 	<div id="trademark" style="top:-105px;">
 		<p>All trademarks used are properties of their respective owners. All rights reserved. Copyright &copy; 2014 Mocapi Animation Ltd.</p>	
