space below menu

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 	</nav>
 
-	<div class="sloganSpacey">
+	<div class="slogan">
 		<h5>Three HiQ we like and respect:</h5>
 		<h41><ul>
 		<li><p>	The Client: he is the King, his vision is the Law.
