fix services page lenghth2

--- a/services.html
+++ b/services.html
@@ -73,9 +73,10 @@
 	<p>RETARGETING (If needed, we can help further):</p> 
 		<ul>
 			<li><p>We can lend a hand with retargeting the motions to your characters</p></li>	
-			<li><p>&nbsp</p></li>	
-			<li><p>&nbsp</p></li>	
 		</ul>
+<p>&nbsp</p>
+<p>&nbsp</p>
+<p>&nbsp</p>
 	</h42>
 	</div>
 
