--- a/blog.html
+++ b/blog.html
@@ -45,9 +45,8 @@
 
 	<div class="slogan">
 		<h5>Under Construction</h5>
+<iframe width="640" height="480" src="//www.youtube.com/embed/0_4Wbuai3Z4" frameborder="0" allowfullscreen></iframe>
 	</div>
-
-</div>
 
 <!--<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />-->
 
