remove under construction

--- a/blog.html
+++ b/blog.html
@@ -44,17 +44,14 @@
 	</nav>
 
 	<div class="slogan">
-		<h5>Under Construction</h5>
+		<h5>Having fun</h5>
 <iframe width="640" height="480" src="//www.youtube.com/embed/0_4Wbuai3Z4" frameborder="0" allowfullscreen></iframe>
 	</div>
 
 <!--<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />-->
 
 <footer>
-	<div id="constr">
-		<img border="0"  width="940" height="80" src="images/underconstruction.jpg" />
-	</div>
-	<div id="trademark" style="top:-105px;">
+	<div id="trademark">
 		<p>All trademarks used are properties of their respective owners. All rights reserved. Copyright &copy; 2014 Mocapi Animation Ltd.</p>	
 	</div>
 </footer>
