--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
 		</ul>
 
 		<ul>
-		<li><p>Remotely, from our location: send us a list of motions to capture for you.<p/></li>	
+		<li><p><a href="remote.html">Remotely, from our location:</a> send us a list of motions to capture for you.<p/></li>	
 			<ul class="listNone">
 			<li><p>PROs: we can still let you direct the shoot via Skype (or similar). This is also budget friendly: a day like this can start at EUR750.<p/></li>	
 			<li><p>CONs: less control, longer approval process.<p/></li>
@@ -83,6 +83,8 @@
 <div id="mocapiIntro">
 	<h43><p>Motion Capture (or mocap for short) is an extension of your hand.</p> 
 	<p>It takes away the tedious work of first and second animation pass and leaves you the pleasure of the true mastery: now you have more time to polish the retargeting, exaggerate what the talent could not do, give the character life with facial animation.</p></h43>
+	<p>&nbsp</p>
+	<p><a href="remote.html"><img border="0" src="images\remote_icon.png" width="250" height="165" /></a></p>
 </div>
 
 </div>
