--- a/services.html
+++ b/services.html
@@ -84,7 +84,7 @@
 	<h43><p>Motion Capture (or mocap for short) is an extension of your hand.</p> 
 	<p>It takes away the tedious work of first and second animation pass and leaves you the pleasure of the true mastery: now you have more time to polish the retargeting, exaggerate what the talent could not do, give the character life with facial animation.</p></h43>
 	<p>&nbsp</p>
-	<p><a href="remote.html"><img border="0" src="images\remote_icon.png" width="250" height="165" /></a></p>
+	<p><a href="remote.html"><img border="0" src="images/remote_icon.png" width="250" height="165" /></a></p>
 </div>
 
 </div>
