--- a/remote.html
+++ b/remote.html
@@ -44,14 +44,14 @@
 	<div class="slogan">
 	<h42>
 	<p><span class="subheader">REMOTE MOTION CAPTURE</span></p>
-	<p><img border="0" src="images\1.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images\2.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images\3.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images\4.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images\5.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images\6.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images\7.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images\8.svg" width="568" height="375" /></p>
+	<p><img border="0" src="images/1.svg" width="568" height="375" /></p>
+	<p><img border="0" src="images/2.svg" width="568" height="375" /></p>
+	<p><img border="0" src="images/3.svg" width="568" height="375" /></p>
+	<p><img border="0" src="images/4.svg" width="568" height="375" /></p>
+	<p><img border="0" src="images/5.svg" width="568" height="375" /></p>
+	<p><img border="0" src="images/6.svg" width="568" height="375" /></p>
+	<p><img border="0" src="images/7.svg" width="568" height="375" /></p>
+	<p><img border="0" src="images/8.svg" width="568" height="375" /></p>
 
 </div>
 
