--- a/remote.html
+++ b/remote.html
@@ -43,15 +43,15 @@
 
 	<div class="slogan">
 	<h42>
-	<p><span class="subheader">REMOTE MOTION CAPTURE</span></p>
-	<p><img border="0" src="images/1.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images/2.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images/3.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images/4.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images/5.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images/6.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images/7.svg" width="568" height="375" /></p>
-	<p><img border="0" src="images/8.svg" width="568" height="375" /></p>
+	<p><span class="subheader">REMOTE CAPTURE SESSION</span></p>
+	<p><img border="0" src="images/1.png" width="568" height="375" /></p>
+	<p><img border="0" src="images/2.png" width="568" height="375" /></p>
+	<p><img border="0" src="images/3.png" width="568" height="375" /></p>
+	<p><img border="0" src="images/4.png" width="568" height="375" /></p>
+	<p><img border="0" src="images/5.png" width="568" height="375" /></p>
+	<p><img border="0" src="images/6.png" width="568" height="375" /></p>
+	<p><img border="0" src="images/7.png" width="568" height="375" /></p>
+	<p><img border="0" src="images/8.png" width="568" height="375" /></p>
 
 </div>
 
