MMP Unity preview

--- a/MotionPack.html
+++ b/MotionPack.html
@@ -48,13 +48,16 @@
 <p>Thanks to Mechanim it is now possible to use mo-cap data to drive the characters in your game. It also gives you extensive control over the transitions between different motions and how they are aligned with each other. With such great tool at hand we were able to create a basic locomotion package that can be applied to any bipedal character with just few clicks and when needed, to add more animations or easily remove the unneeded ones.</p>
 
 	<p>&nbsp</p>
-
-	<p><span class="subheader">MOCAPI MOTION PACK TUTORIAL</span></p>
-	</h42>
-	
+	<p><span class="subheader">MOCAPI MOTION PACK TUTORIAL</span></p>	
 	<p><a href="https://docs.google.com/document/d/10wwzJH_dW02cnNakU4QVZQ81rOfjZOUe2iOlqLR-FCk/pub"><img border="0" src="images/MocapiMotionPack.jpg" width="560" height="420" /></a></p>
 
-	
+	<p>&nbsp</p>
+	<p><span class="subheader">MOCAPI MOTION PACK PREVIEW</span></p>	
+<p>You may be prompted to allow Unity Player to run in your browser.</p>
+
+	<p><a href="http://www.mocapianimation.com/Unity/MocapiMotionPackPreview.html"><img border="0" src="images/UnityPlayer.jpg" width="560" height="343" /></a></p>
+
+	</h42>	
 	</div>
 
 
