--- a/MotionPack.html
+++ b/MotionPack.html
@@ -52,10 +52,10 @@
 	<p><a href="https://docs.google.com/document/d/10wwzJH_dW02cnNakU4QVZQ81rOfjZOUe2iOlqLR-FCk/pub"><img border="0" src="images/MocapiMotionPack.jpg" width="560" height="420" /></a></p>
 
 	<p>&nbsp</p>
-	<p><span class="subheader">MOCAPI MOTION PACK PREVIEW</span></p>	
-<p>You may be prompted to allow Unity Player to run in your browser.</p>
+	<p><span class="subheader">MOCAPI MOTION PACK PREVIEW</span></br>	
+(you may be prompted to allow Unity Player to run in your browser)</p>
 
-	<p><a href="http://www.mocapianimation.com/Unity/MocapiMotionPackPreview.html"><img border="0" src="images/UnityPlayer.jpg" width="560" height="343" /></a></p>
+	<p><a href="http://www.mocapianimation.com/Unity/MocapiMotionPackPreview.html" target="_blank"><img border="0" src="images/UnityPlayer.jpg" width="560" height="343" /></a></p>
 
 	</h42>	
 	</div>
