--- a/about - Haiku.html
+++ b/about - Haiku.html
@@ -7,14 +7,13 @@
 
 <style type="text/css">
 </style>
-
 	
 <head>
-	<title>Mocapi Animation - Motion Capture Services</title>
+	<title>Mocapi - About</title>
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" type="image/png" href="images/m-iconGrad.png" />
 	<meta name="keywords" content="motion capture, mo-cap, mocap, animation, keyframing, key-framing, keyframe, retargeting, retarget, rigging, humanIK, maya, motionbuilder, max, 3dsmax, 3ds max, xsens, mvn, mvn2, moven, mvn studio, services, tutorials, tutors, game, ingame, in-game, film, cinematic, animatic, ingame, Unity, Unity3D, previz, previs, portable">
-	<meta name="description" content="Mocap and Character Animation Service, Jump-in Tools, Retargeting, Impossible Turnaround Times!">
+	<meta name="description" content="Mocap and Character Animation Service, Jump-in Tools, Retargeting, Impossible Turnaround Times!">	
 
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
@@ -24,38 +23,39 @@
 </head>
 
 <body>
-
 <div id="centerField">
 
 	<nav>		
-		<div id="mocapiName">
-		<div id="nameVertLine"></div>
-		<h2 id="nameText">MOCAPI<br/>ANIMATION</h2>
-		</div>
+		<a href="index.html" id="mocapiName">
+			<div id="nameVertLine"></div>
+			<h2 id="nameText">MOCAPI<br/>ANIMATION</h2>
+		</a>
 
 	  <div id="mocapiMenu">
 			<ul>
 				<li class="menuTab"><a href="contact.html" class="menuLink"><h6>CONTACT</h6><div class="menuLine"></div></a></li>
 				<li class="menuTab"><a href="blog.html" class="menuLink"><h6>BLOG</h6><div class="menuLine"></div></a></li>
 				<li class="menuTab"><a href="services.html" class="menuLink"><h6>SERVICES</h6><div class="menuLine"></div></a></li>
-				<li class="menuTab"><a href="about.html" class="menuLink"><h6>ABOUT</h6><div class="menuLine"></div></a></li>
+				<li class="menuTab"><a href="about.html" class="menuLink"><h6>ABOUT</h6><div class="menuLineActive"></div></a></li>
 			</ul>	
 	  </div>
 
 	</nav>
 
 	<div class="slogan">
-		<h5>Your Animation.<br />
-		On Time.<br />
-		On Budget.</h5>
-	<p>&nbsp</p>
-		<h2>Cloud based MoCap.</h2>
+		<h5>Three HiQ we like and respect:</h5>
+		<h41><ul>
+		<li><p>	The Client: he is the King, his vision is the Law.
+				<br>We do our best to support and execute.<p/></li>	
+		<li><p>	Time and Quality: looking for the balance is a challenge. 
+				<br>Finding it is a reward.<p/></li>	
+		<li><p>	Fun: we do best what we enjoy.
+				<br>It is our craft we enjoy the most.<p/></li>
+		</ul>
 
 	</div>
 
 </div>
-
-<div id="picTails"></div>
 
 <footer>
 	<div id="trademark">
