--- a/about.html
+++ b/about.html
@@ -43,16 +43,28 @@
 	</nav>
 
 	<div class="slogan">
-		<h5>Three HiQ we like and respect:</h5>
-		<h41><ul>
-		<li><p>	The Client: he is the King, his vision is the Law.
-				<br>We do our best to support and execute.<p/></li>	
-		<li><p>	Time and Quality: looking for the balance is a challenge. 
-				<br>Finding it is a reward.<p/></li>	
-		<li><p>	Fun: we do best what we enjoy.
-				<br>It is our craft we enjoy the most.<p/></li>
-		</ul>
+		<h5></h5>
+		<h41>
+<p>Mocapi Animation aims to bring MOTION CAPTURE to animators from all walks of life.</p>
+<p>We provide mocap to indie developers and start-ups who want to have a "triple A" look to their characters for a fraction of the money. The industry professional will benefit from our expertise and incredible turnaround times.</p>
+<ul>
+<li>We use professional grade gear which enables us to achieve high quality in very little time.</li>
+<li>We can provide the right talent, when needed.</li>
+<li>We let you direct the shoot over a web connection.</li>
+<li>We deliver your animations within an hour or so after the session. You receive your motions in FBX or BVH format.</li>
+<li>We <a href="services.html">price</a> our service to make it  available to everyone.</li>
+</ul>
+<p>Please take a look at our basic workflow.</p>
+<p>If you are interested, please do not hesitate to <a href="contact.html">contact us</a>.</br>We will be happy to talk with you about:</p>
+<ul>
+<li>cloud-based real time demo</li>
+<li>on-site visit</li>
+<li>possible workflows and integration</li>
+</ul>
 
+
+<p>Best Regards,</br>
+The Mocapi team.</p>
 	</div>
 
 </div>
