--- a/remote.html
+++ b/remote.html
@@ -9,7 +9,7 @@
 </style>
 	
 <head>
-	<title>Mocapi - Remote Session</title>
+	<title>Mocapi - Cloud-based Mocap Session</title>
 	<link href="mocapi.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" type="image/png" href="images/m-iconGrad.png" />
 	<meta name="keywords" content="motion capture, mo-cap, mocap, animation, keyframing, key-framing, keyframe, retargeting, retarget, rigging, humanIK, maya, motionbuilder, max, 3dsmax, 3ds max, xsens, mvn, mvn2, moven, mvn studio, services, tutorials, tutors, game, ingame, in-game, film, cinematic, animatic, ingame, Unity, Unity3D, previz, previs, portable">
@@ -43,7 +43,7 @@
 
 	<div class="slogan">
 	<h42>
-	<p><span class="subheader">REMOTE CAPTURE SESSION</span></p>
+	<p><span class="subheader">CLOUD-BASED CAPTURE SESSION</span></p>
 	<p><img border="0" src="images/1.png" width="568" height="375" /></p>
 	<p><img border="0" src="images/2.png" width="568" height="375" /></p>
 	<p><img border="0" src="images/3.png" width="568" height="375" /></p>
