--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 <li>We deliver your animations within an hour or so after the session. You receive your motions in FBX or BVH format.</li>
 <li>We <a href="services.html">price</a> our service to make it  available to everyone.</li>
 </ul>
-<p>Please take a look at our basic workflow.</p>
+<p>Please take a look at our <a href="remote.html">basic workflow</a>.</p>
 <p>If you are interested, please do not hesitate to <a href="contact.html">contact us</a>.</br>We will be happy to talk with you about:</p>
 <ul>
 <li>cloud-based real time demo</li>
@@ -65,6 +65,9 @@
 
 <p>Best Regards,</br>
 The Mocapi team.</p>
+<p>&nbsp</p>
+<p>&nbsp</p>
+<p>&nbsp</p>
 	</div>
 
 </div>
