--- a/blog.html
+++ b/blog.html
@@ -46,6 +46,21 @@
 	<div class="slogan">
 		<h5>Having fun</h5>
 <iframe width="640" height="480" src="//www.youtube.com/embed/0_4Wbuai3Z4" frameborder="0" allowfullscreen></iframe>
+
+		<h5>Three HiQ we like and respect:</h5>
+		<h41><ul>
+		<li><p>	The Client: he is the King, his vision is the Law.
+				<br>We do our best to support and execute.<p/></li>	
+		<li><p>	Time and Quality: looking for the balance is a challenge. 
+				<br>Finding it is a reward.<p/></li>	
+		<li><p>	Fun: we do best what we enjoy.
+				<br>It is our craft we enjoy the most.<p/></li>
+		</ul>
+		
+		<p>&nbsp</p>
+		<p>&nbsp</p>
+		<p>&nbsp</p>
+
 	</div>
 
 <!--<img border="0" src="images\underconstruction.jpg" style="position:absolute; left:auto; right:auto; bottom:0px;" />-->
