--- a/about.html
+++ b/about.html
@@ -39,12 +39,11 @@
 				<li class="menuTab"><a href="about.html" class="menuLink"><h6>ABOUT</h6><div class="menuLineActive"></div></a></li>
 			</ul>	
 	  </div>
-
 	</nav>
 
 	<div class="slogan">
-		<h42>
-<p>Mocapi Animation aims to bring MOTION CAPTURE to animators from all walks of life.</p>
+	<h42>
+<p><span class="subheader">Mocapi Animation brings MOTION CAPTURE to animators from all walks of life.</span></p>
 <p>We provide mocap to indie developers and start-ups who want to have a "triple A" look to their characters for a fraction of the money. The industry professional will benefit from our expertise and incredible turnaround times.</p>
 <ul>
 <li>We use professional grade gear which enables us to achieve high quality in very little time.</li>
